--- a/style.css
+++ b/style.css
@@ -3,8 +3,139 @@
 
 
 .work-sans-font {
-  font-family: "Work Sans", serif;
-  font-optical-sizing: auto;
+    font-family: "Work Sans", serif;
+    font-optical-sizing: auto;
 
-  font-style: normal;
+    font-style: normal;
+}
+
+/* shared-styles */
+ main > section{
+    margin-top: 130px;
+ }
+.display-flex {
+    display: flex;
+}
+
+/* dark-02 */
+.light-gray {
+    color: #424242;
+
+}
+
+/* dark-03 */
+.gray {
+    color: #727272;
+}
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-explo{
+    color: white;
+    background-color: orange;
+    padding: 20px 25px;
+    border-radius: 4px;
+    font-size: 1.25rem;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+}
+main{
+    margin: 0 auto;
+    max-width: 1440px;
+}
+
+
+
+/* header-styles */
+.navbar , .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* nav related styles */
+.nav-item {
+    list-style: none;
+    margin-right: 20px;
+    font-weight: 500;
+
+}
+.brand{
+    font-size: 3rem;
+    font-weight: 700px;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+/* banner related styles */
+.banner-content{
+    margin: 0 auto;
+    text-align: center;
+    max-width: 850px;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.banner-subtitle{
+    font-size: 1rem;
+    font-weight: 400;
+    
+}
+/* team related styles */
+.teams{
+    display: flex;
+    align-items: center;
+}
+.team-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+    
+}
+.team-features{
+    max-width: 540px;
+    margin-left: 130px;
+}
+.feature-title{
+    font-size: 2.8rem;
+    margin-bottom: 30px;
+}
+#Quick-list{
+    
+    font-weight: 500;
+    
+}
+
+#Features{
+    color: rgba(255, 144, 14, 1);
+
+}
+.feature-subtitle{
+    margin-bottom: 30px;
+    color: #727272;
+    font-weight: 500;
+}
+/* media querry for banner section */
+@media screen and (max-width:576px) {
+    .navbar, .nav-item, .teams{
+        flex-direction: column;
+    }
+    .banner-img{
+        width: 100%;
+    }
+    .team-features{
+        margin-left: 20px;
+    }
+    .team-img{
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+    
 }
